--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.4.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/uuid": "^10.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
