--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build.environment]
   NODE_VERSION = "20"
-  
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_URL,VITE_SUPABASE_ANON_KEY"
 
 [[redirects]]
   from = "/*"
