feat: Install and configure Playwright for integration/E2E testing
 - Install Playwright package and browser binaries. - Manually create playwright.config.ts and tests/example.spec.ts. - Add test:e2e script to package.json. - Update testing strategy and Memory Bank documentation.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --config jest.config.cjs --watch",
     "test:coverage": "jest --config jest.config.cjs --coverage",
     "test:ci": "jest --config jest.config.cjs --ci",
+    "test:e2e": "playwright test",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "prepare": "husky"
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@playwright/test": "^1.51.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
